--- a/admin/src/Components/Sidebar/Sidebar.css
+++ b/admin/src/Components/Sidebar/Sidebar.css
@@ -20,7 +20,9 @@
     gap: 20px;
     cursor: pointer;
 }
-
+.sidebar-item img{
+    width: 20%;
+}
 @media (max-width:800px) {
     .sidebar {
         padding: 30px 0px;
