--- a/admin/src/Components/Sidebar/Sidebar.css
+++ b/admin/src/Components/Sidebar/Sidebar.css
@@ -23,6 +23,11 @@
 .sidebar-item img{
     width: 20%;
 }
+.sidebar-item .svg{
+    width: 15%;
+}
+
+
 @media (max-width:800px) {
     .sidebar {
         padding: 30px 0px;
