--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     align-items: center;
     padding: 16px;
     box-shadow: 0px 1px 3px -2px rgb(0, 0, 0.5);
+
 }
 
 .navbar .nav-logo {
@@ -12,13 +13,18 @@
     justify-content: center;
     gap: 10px;
 }
+.navbar .img{
+    display: flex;
+    border: 2px solid black;
+}
 
 .nav-logo img {
     width: 50px;
 }
 
 .nav-logo p {
-    font-size: 32px;
+    font-size: 40px;
+    color:rgb(255, 60, 0);
 }
 
 .navbar ul {
